<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/meditation"
    android:padding="16dp">

    <ScrollView
        android:layout_width="379dp"
        android:layout_height="619dp"
        android:layout_above="@id/btnPlaySound"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:id="@+id/layoutSteps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/meditation_title"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>


    </ScrollView>
    <!-- Play/Pause button -->
    <ToggleButton
        android:id="@+id/btnPlaySound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textOn="@string/pausar_sonido"
        android:textOff="@string/reproducir_sonido"
        android:drawableTop="@raw/meditacion"
        android:background="@drawable/toggle_color"/>

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/boton_de_volver_atras"
        android:src="@drawable/volver_flecha" />
</RelativeLayout>
