<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/color_arena">

    <ImageButton
        android:id="@id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/boton_de_volver_atras"
        android:src="@drawable/volver_flecha" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="78dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="545dp"
        android:text="@string/nombre_de_usuario"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="326dp"
        android:text="@string/cambiar_contrase_a" />

    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="360dp"
        android:layout_height="49dp"
        android:layout_above="@+id/changePasswordButton"
        android:layout_marginBottom="27dp"
        android:autofillHints=""
        android:hint="@string/nueva_contrase_a"
        android:inputType="textPassword" />

</RelativeLayout>
