<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="731dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="150dp">

        <LinearLayout
            android:id="@+id/layoutBreath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/detalles_a_tener_en_cuenta_en_el_ejercicio_de_respiraci_n"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>


    </ScrollView>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:layout_above="@id/buttonLayout"
        android:layout_marginBottom="10dp"
        android:background="@color/color_arena"/>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="48dp">

        <ImageButton
            android:id="@+id/backwardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/avanzar"
            android:rotation="180"
            android:src="@drawable/avanzar"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/reproducir_sonido"
            android:src="@drawable/reproducir"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_marginEnd="20dp" />
        <ImageButton
            android:id="@+id/pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pausar_sonido"
            android:src="@drawable/pausar"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_marginEnd="20dp" />

        <ImageButton
            android:id="@+id/forwardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/avanzar"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/avanzar" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/boton_de_volver_atras"
        android:src="@drawable/volver_flecha" />
</RelativeLayout>


