<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_arena">

    <ImageView
        android:id="@+id/imageViewIcon"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="391dp"
        android:contentDescription="@string/icono"
        android:src="@drawable/ic_relax_icon" />

    <Button
        android:id="@+id/buttonNatureSounds"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewIcon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="488dp"
        android:text="@string/sonidos_de_naturaleza" />


    <Button
        android:id="@+id/buttonMeditation"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewIcon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="416dp"
        android:text="@string/meditaci_n" />

    <Button
        android:id="@+id/buttonBreathingExercises"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewIcon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="555dp"
        android:text="@string/ejercicios_de_respiraci_n"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/ayudar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/ayuda"
        android:focusable="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ayudar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="699dp"
        android:background="@color/buttons"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:ignore="TextSizeCheck">

        <ImageView
            android:id="@+id/toolbar_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:adjustViewBounds="true"
            android:contentDescription="@string/icono"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:src="@drawable/ic_relax_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="68dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/perfil"
        android:elevation="10dp"
        android:src="@drawable/avatar" />

    <ImageButton
        android:id="@+id/logoutButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/cerrar_sesion"
        android:contentDescription="@string/cerrar_sesion"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationMeditation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116"
        app:lottie_autoPlay="false"
        app:lottie_fileName="AnimationMeditation.json"
        app:lottie_loop="false"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationNatureSounds"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116"
        app:lottie_autoPlay="false"
        app:lottie_fileName="AnimationNature.json"
        app:lottie_loop="false"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationBreathingExercises"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116"
        app:lottie_autoPlay="false"
        app:lottie_fileName="AnimationBreathingExercises.json"
        app:lottie_loop="false"/>



</RelativeLayout>
